package com.weekstone.learn.designpattern.factorymethod.standard;

public interface Factory {
    Product createProduct();
}
