package com.weekstone.learn.designpattern.factorymethod.standard;

public interface Product {
    void show();
}
