@startuml structure
interface Factory {
  +createProduct(): Product
}

class ConcreteFactory1  {
  +createProduct(): Product
}

class ConcreteFactory2  {
  +createProduct(): Product
}

interface Product {}

client -right-> Factory : 使用

Factory <|.down. ConcreteFactory1 : 实现
Factory <|.down. ConcreteFactory2 : 实现

ConcreteFactory1 --> Product : 实例化
ConcreteFactory2 --> Product : 实例化

Product <|.. ConcreteProduct1 : 实现
Product <|.. ConcreteProduct2 : 实现

@enduml